# DeepAgentsRS

./: Cargo.toml  README.md
crates/deepagents/: Cargo.toml
crates/deepagents-acp/: Cargo.toml
crates/deepagents-acp/src/: main.rs  server.rs
crates/deepagents-acp/tests/: e2e_phase3_http.rs
crates/deepagents-cli/: Cargo.toml
crates/deepagents-cli/src/: main.rs
crates/deepagents-cli/tests/: e2e_channels.rs  e2e_cli.rs  e2e_config.rs  e2e_memory.rs  e2e_openai_compatible.rs  e2e_phase1_5_runtime.rs  e2e_phase1_stateful.rs  e2e_phase2_security.rs  e2e_phase4_subagents.rs  e2e_phase6_skills.rs  e2e_phase7_skill_registry.rs  e2e_prompt_caching.rs  e2e_runner_events.rs
crates/deepagents/schema/: config-schema.toml
crates/deepagents/src/: agent.rs  approval.rs  audit.rs  lib.rs  state.rs  types.rs
crates/deepagents/src/backends/: composite.rs  local.rs  mod.rs  protocol.rs
crates/deepagents/src/config/: mod.rs
crates/deepagents/src/llm/: common.rs  mod.rs  openai_compatible.rs  openrouter.rs  protocol.rs
crates/deepagents/src/memory/: access.rs  identity.rs  mod.rs  protocol.rs  retrieval.rs  store_file.rs
crates/deepagents/src/middleware/: filesystem.rs  mod.rs  protocol.rs
crates/deepagents/src/provider/: catalog.rs  init.rs  llm.rs  mock.rs  mod.rs  openai_compatible.rs  prompt_cache.rs  prompt_guided.rs  protocol.rs
crates/deepagents/src/provider/openai_compatible/: mod.rs  provider.rs  transport.rs  wire.rs
crates/deepagents/src/runtime/: assembly.rs  cache_store.rs  events.rs  filesystem_runtime_middleware.rs  memory_middleware.rs  mod.rs  patch_tool_calls.rs  prompt_cache_runtime.rs  prompt_caching_middleware.rs  protocol.rs  provider_cache.rs  resumable_runner.rs  simple.rs  skills_middleware.rs  stable_hash.rs  structured_output.rs  summarization_middleware.rs  todolist_middleware.rs  tool_compat.rs
crates/deepagents/src/skills/: declarative.rs  governance.rs  loader.rs  mod.rs  protocol.rs  registry.rs  selection.rs  validator.rs
crates/deepagents/src/subagents/: builtins.rs  middleware.rs  mod.rs  protocol.rs  registry.rs
crates/deepagents/src/tools/: mod.rs  protocol.rs  std_tools.rs
crates/deepagents/tests/: config_system.rs  filesystem_middleware.rs  filesystem_state.rs  hitl_phase10.rs  integration_patch_tool_calls.rs  local_backend.rs  memory_phase7.rs  multimodal_read_file_phase7.rs  offload_phase9.rs  phase5_patch_tool_calls.rs  phase8_5_middleware_order.rs  prompt_caching_provider.rs  provider_model_levels.rs  provider_openai_compatible.rs  provider_openai_http.rs  provider_openrouter.rs  provider_prompt_guided.rs  runner_events.rs  runtime_builder.rs  skills_execution_isolation.rs  skills_phase6.rs  summarization_phase8.rs  todo_phase9.rs  trait_first.rs
docs/: E2E_PHASE0.md  E2E_PHASE1.md  E2E_PHASE1_5.md  E2E_PHASE2.md  E2E_PHASE3_ACP.md  ISSUE_LOG_RUST_VS_PYTHON.md  ITERATION_PHASE0_DETAILED.md  ITERATION_PHASE1_5_DETAILED.md  ITERATION_PHASE1_DETAILED.md  ITERATION_PHASE2_DETAILED.md  ITERATION_PHASE3_DETAILED.md  ITERATION_PLAN.md  RESEARCH_DEEPAGENTS_PYTHON.md  RESEARCH_PROVIDER_ALIGNMENT.md  TECH_DESIGN.md
docs/acceptance/: ACCEPTANCE_CORE.md  PYTHON_PARITY_MATRIX.md  backend.md  filesystem.md  hitl.md  patch_tool_calls.md  runner.md  subagents.md  summarization.md  todo.md
docs/acceptance/backend/: composite.md  index.md  sandbox.md
docs/acceptance/filesystem/: execute.md  file_ops.md  index.md  offload.md  search.md  security.md
docs/acceptance/hitl/: flow.md  (+2 more)
docs/acceptance_extras/: ACCEPTANCE_EXTRAS.md
docs/design/: agent-skill-architecture-design.md  agent-skill-rfc.md  cli-e2e-test-plan.md  llm-prompt-cache-design.md  memory-architecture-rfc.md  memory-design.md
docs/e2e/: E2E_PHASE0.md  E2E_PHASE1.md  E2E_PHASE1_5.md  E2E_PHASE2.md  E2E_PHASE3_ACP.md  E2E_PHASE4_SUBAGENTS.md  E2E_PHASE5_PATCH_TOOL_CALLS.md  E2E_PHASE6_SKILLS.md  E2E_PHASE7_MEMORY.md
docs/iteration/: AGENT_STREAMING_PLAN.md  DEPRECATED-ZEROCLAW_PLATFORM_INTEGRATION_PLAN.md  HITL_INTERRUPT_RESUME_PLAN.md  ITERATION_PHASE0_DETAILED.md  ITERATION_PHASE1_5_DETAILED.md  ITERATION_PHASE1_DETAILED.md  ITERATION_PHASE2_DETAILED.md  ITERATION_PHASE3_DETAILED.md  ITERATION_PHASE4_DETAILED.md  ITERATION_PHASE5_DETAILED.md  ITERATION_PHASE6_DETAILED.md  ITERATION_PHASE7_DETAILED.md  ITERATION_PHASE8_5_DETAILED.md  ITERATION_PHASE8_DETAILED.md  ITERATION_PLAN.md  LLM_MODEL_LEVELS_PLAN.md  LLM_PROVIDER_PROGRESS.md  MODEL_LEVEL_SELECTION_MIDDLEWARE_PLAN.md  MULTIMODAL_READ_FILE_PLAN.md  OLLAMA_PROVIDER_PLAN.md  PROMPT_CACHING_PLAN.md  SEMANTIC_SUMMARIZATION_PLAN.md  TOOL_OUTPUT_NORMALIZATION_PLAN.md  ZEROCLAW_CHANNELS_MIGRATION_PLAN.md  ZEROCLAW_PLATFORM_INTEGRATION_PLAN.md  agent-skill-iteration-plan.md  llm_prompt_cache_plan.md
scripts/: agent-skill-architecture-design-original.md  convert_file_links.py  package_deepagents_cli.sh
(+39 files in other folders)
