[workspace]
resolver = "2"
members = [
  "crates/deepagents",
  "crates/deepagents-cli",
  "crates/deepagents-acp",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://example.invalid/deepagents"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
async-stream = "0.3"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
globset = "0.4"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
semver = { version = "1", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "*"
tokio-rustls = "0.26.4"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

rustls = "0.23.37"
rustls-pki-types = "1.14.0"

walkdir = "2"
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
schemars = "1"

parking_lot = "0.12"

prost = { version = "0.14", default-features = false, features = ["derive"] }

rusqlite = { version = "0.37", features = ["bundled"] }
chrono = { version = "0.4", features = ["clock", "std", "serde"] }
cron = "0.15"
