[package]
name = "deepagents-acp"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum = "0.7"
clap.workspace = true
deepagents = { path = "../deepagents" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower = { version = "0.5", features = ["util"] }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
