[package]
name = "deepagents-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
deepagents = { path = "../deepagents" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "deepagents"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
serde_json.workspace = true
