[package]
name = "deepagents-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
deepagents = { path = "../deepagents" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "deepagents"
path = "src/main.rs"

[dev-dependencies]
axum = "0.7"
tempfile = "3"
serde_json.workspace = true
tokio-stream = "0.1"
