[package]
name = "deepagents"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
base64.workspace = true
bytes = "1"
chrono.workspace = true
globset.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream = "0.1"
tracing.workspace = true
walkdir.workspace = true
sha2.workspace = true
hex.workspace = true
futures-util.workspace = true

[dev-dependencies]
axum = "0.7"
tempfile = "3"
